--- a/style.css
+++ b/style.css
@@ -20,3 +20,12 @@ body{
 .big_image{
     width: 100%;
 }
+
+h4{
+    background-color: aquamarine;
+    line-height: 2;
+    margin: 0px;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+}
