--- a/style.css
+++ b/style.css
@@ -1,31 +1,41 @@
-body{
-    background-image: cover;
-}
-.heading{
-    width: 100%;
-    text-align: center;
-}
 
+.heading
+{
+width: 100%;
+text-align: left;
+}
 .heading h3{
     display: inline;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .heading button{
     float: right;
-    border: 2px dashed paleturquoise;
-
+    border: 1px solid white;
 }
 
-.big_image{
-    width: 100%;
+#start ,#status, #restart
+{
+font-size: 22px;
 }
 
-h4{
-    background-color: aquamarine;
-    line-height: 2;
-    margin: 0px;
-    bottom: 0;
-    position: fixed;
-    width: 100%;
+.modal-dialog
+{
+    width: 70%;
 }
+.modal-body
+{
+    text-align: left;
+    font-size: 20px;
+}
+h4
+{
+   background-color: grey;
+   color:white;
+   line-height: 2;
+}
+canvas 
+  {
+      border:3px solid white;
+      border-radius: 20px;
+      box-shadow:  5px 5px 5px white;
+  }
